# bazel_go_example

./: bazel-bazelexample  bazel-bin  bazel-out  bazel-testlogs
service1/src/: BUILD.bazel  main.go
service2/src/: BUILD.bazel  main.go
service2/src/static/: index.html
service2/src/static/styles/: style.css
