load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "src",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
